fix invisible icons in sidebar

--- a/css/style-narrow.css
+++ b/css/style-narrow.css
@@ -100,6 +100,7 @@
 							color: #41484c;
 							width: 1.25em;
 							line-height: 1.75em;
+							padding: 0 0 0 0.75em;
 						}
 
 					#nav ul li a.active
