--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -44,7 +44,7 @@
 #header
 	{
 		position: fixed;
-		width: 32px;
+		width: 48px;
 		height: 100%;
 		color: #fff;
 		background: #222729 url('images/overlay.png');
@@ -92,6 +92,7 @@
 							color: #41484c;
 							width: 1.25em;
 							line-height: 1.75em;
+							padding: 0 0 0 1em;
 						}
 
 					#nav ul li a.active
@@ -107,7 +108,7 @@
 	
 	#footer
 	{
-		margin-left: 32px;
+		margin-left: 48px;
 	}
 
 /*********************************************************************************/
@@ -116,31 +117,5 @@
 
 	#main
 	{
-		margin-left: 32px;
+		margin-left: 48px;
 	}
-
-/*********************************************************************************/
-/* Side Panel                                                                    */
-/*********************************************************************************/
-
-	#sidePanel
-	{
-		background: #222729 url('images/overlay.png');
-		box-shadow: inset -0.25em 0 0.25em 0 rgba(0,0,0,0.125);
-	}
-
-	#sidePanelToggle
-	{
-	}
-	
-		#sidePanelToggle .toggle
-		{
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background: rgba(128,136,144,0.5) url('images/toggle.svg') center center no-repeat;
-			border-radius: 0.35em;
-			margin: 0.25em;
-		}
